# datachannel-native

./: .gitignore  .gitmodules  LibDC.podspec  README.md  build.gradle.kts  build_apple.sh  build_openssl_android.sh  build_openssl_apple.sh  datachannel-apple.podspec  datachannel-native.podspec  gradle.properties  release_android.sh  release_apple.sh  run_djinni.sh  settings.gradle.kts  versions.properties
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Constants.kt  Functions.kt  convention.publication.gradle.kts
data-channel-android/: build.gradle
data-channel-android/src/: proguard-consumer-rules.pro
data-channel-android/src/main/cpp/: CMakeLists.txt  DataChannelImpl.cpp  PeerConnectionImpl.cpp  PeerConnectionImpl.h  libdc.cpp
data-channel-android/src/main/java/com/cdnbye/libdc/: LibDC.kt
example/LibDCApple/LibDCApple/: ContentView.swift  LibDCAppleApp.swift
example/LibDCApple/LibDCApple.xcodeproj/: project.pbxproj
example/libDC/: build.gradle.kts
example/libDC/src/main/: AndroidManifest.xml
example/libDCiOSExample/libDCiOSExample/: ContentView.swift  libDCiOSExampleApp.swift
example/libDCiOSExample/libDCiOSExample.xcodeproj/: project.pbxproj
example/libWebRTC/: build.gradle.kts
example/libWebRTC/src/main/: AndroidManifest.xml
generated-src/cpp/: CandidateCallback.hpp  CertificateType.hpp  Configuration.hpp  DataChannel.hpp  DataChannelInit.hpp  DcCallback.hpp  DcErrorCallback.hpp  DcEvent.hpp  DcEventCallback.hpp  DcMessageCallback.hpp  GatheringState.hpp  GatheringStateCallback.hpp  IceServer.hpp  IceServerRelayType.hpp  IceServerType.hpp  IceState.hpp  IceStateCallback.hpp  LibDC.hpp  LibVersion.hpp  LogCallback.hpp  LogLevel.hpp  PeerConnection.hpp  ProxyServer.hpp  ProxyServerType.hpp  Reliability.hpp  ReliabilityType.hpp  SdpCallback.hpp  SignalingState.hpp  SignalingStateCallback.hpp  TransportPolicy.hpp
generated-src/java/com/cdnbye/libdc/: CandidateCallback.java  CertificateType.java  Configuration.java  DataChannel.java  DataChannelInit.java  DcCallback.java  DcErrorCallback.java  DcEvent.java  DcEventCallback.java  DcMessageCallback.java  GatheringState.java  GatheringStateCallback.java  IceServer.java  IceServerRelayType.java  IceServerType.java  IceState.java  IceStateCallback.java  LibDC.java  LibVersion.java  LogCallback.java  LogLevel.java  PeerConnection.java  ProxyServer.java  ProxyServerType.java  Reliability.java  ReliabilityType.java  SdpCallback.java  SignalingState.java  SignalingStateCallback.java  TransportPolicy.java
generated-src/jni/: NativeCandidateCallback.cpp  NativeCandidateCallback.hpp  NativeCertificateType.hpp  NativeConfiguration.cpp  NativeConfiguration.hpp  NativeDataChannel.cpp  NativeDataChannel.hpp  NativeDataChannelInit.cpp  NativeDataChannelInit.hpp  NativeDcCallback.cpp  NativeDcCallback.hpp  NativeDcErrorCallback.cpp  NativeDcErrorCallback.hpp  NativeDcEvent.hpp  NativeDcEventCallback.cpp  NativeDcEventCallback.hpp  NativeDcMessageCallback.cpp  NativeDcMessageCallback.hpp  NativeGatheringState.hpp  NativeGatheringStateCallback.cpp  NativeGatheringStateCallback.hpp  NativeIceServer.cpp  NativeIceServer.hpp  NativeIceServerRelayType.hpp  NativeIceServerType.hpp  NativeIceState.hpp  NativeIceStateCallback.cpp  NativeIceStateCallback.hpp  NativeLibDC.cpp  NativeLibDC.hpp  NativeLibVersion.cpp  NativeLibVersion.hpp  NativeLogCallback.cpp  NativeLogCallback.hpp  NativeLogLevel.hpp  NativePeerConnection.cpp  NativePeerConnection.hpp  NativeProxyServer.cpp  NativeProxyServer.hpp  NativeProxyServerType.hpp  (+9 more)
generated-src/objc/: DCCandidateCallback+Private.h  DCCandidateCallback+Private.mm  DCCandidateCallback.h  DCCertificateType+Private.h  DCCertificateType.h  DCConfiguration+Private.h  DCConfiguration+Private.mm  DCConfiguration.h  DCConfiguration.mm  DCDataChannel+Private.h  DCDataChannel+Private.mm  DCDataChannel.h  DCDataChannelInit+Private.h  DCDataChannelInit+Private.mm  DCDataChannelInit.h  DCDataChannelInit.mm  DCDcCallback+Private.h  DCDcCallback+Private.mm  DCDcCallback.h  DCDcErrorCallback+Private.h  DCDcErrorCallback+Private.mm  DCDcErrorCallback.h  DCDcEvent+Private.h  DCDcEvent.h  DCDcEventCallback+Private.h  DCDcEventCallback+Private.mm  DCDcEventCallback.h  DCDcMessageCallback+Private.h  DCDcMessageCallback+Private.mm  DCDcMessageCallback.h  DCGatheringState+Private.h  DCGatheringState.h  DCGatheringStateCallback+Private.h  DCGatheringStateCallback+Private.mm  DCGatheringStateCallback.h  DCIceServer+Private.h  DCIceServer+Private.mm  DCIceServer.h  DCIceServer.mm  DCIceServerRelayType+Private.h  (+44 more)
gradle/wrapper/: gradle-wrapper.properties
idl/: libdc.djinni
libs/: data-channel-android-release.aar
libs/datachannel_wrapper.xcframework/: Info.plist
libs/datachannel_wrapper.xcframework/ios-arm64/datachannel_wrapper.framework/: Info.plist
libs/datachannel_wrapper.xcframework/ios-arm64/datachannel_wrapper.framework/Headers/: DCCertificateType.h  DCConfiguration.h  DCDataChannel.h  DCDcEventCallback.h  DCIceServerRelayType.h  DCLogCallback.h  datachannel_wrapper-Swift.h
libs/datachannel_wrapper.xcframework/ios-arm64/datachannel_wrapper.framework/Modules/: module.modulemap
libs/datachannel_wrapper.xcframework/ios-arm64_x86_64-simulator/datachannel_wrapper.framework/: Info.plist
libs/datachannel_wrapper.xcframework/ios-arm64_x86_64-simulator/datachannel_wrapper.framework/Headers/: DCDcEventCallback.h  DCIceServerType.h  datachannel_wrapper-Swift.h
libs/datachannel_wrapper.xcframework/ios-arm64_x86_64-simulator/datachannel_wrapper.framework/_CodeSignature/: CodeResources
libs/datachannel_wrapper.xcframework/macos-arm64_x86_64/datachannel_wrapper.framework/: datachannel_wrapper
libs/datachannel_wrapper.xcframework/tvos-arm64/datachannel_wrapper.framework/: Info.plist
libs/datachannel_wrapper.xcframework/tvos-arm64_x86_64-simulator/datachannel_wrapper.framework/: Info.plist
src/: CMakeLists.txt  FindOpenSSL.cmake
src/cpp/: DataChannelImpl.cpp  DataChannelImpl.h  PeerConnectionImpl.cpp
src/objc/: ObjCExceptions.m  datachannel_wrapper.h  datachannel_wrapper.swift
(+53 files in other folders)
